<resources>
    <string name="app_name">HumanCareKioskGuide</string>
    <string name="main_title">키오스크 체험교육</string>
    <string name="menu_fastfood">패스트푸드</string>
    <string name="menu_hospital">병원</string>
    <string name="menu_train">기차</string>
    <string name="menu_issue_dispenser">무인발급</string>
    <string name="won">원</string>
    <string name="back">이전</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="finish">종료하기</string>
    <string name="movetoback">뒤로가기</string>
    <string name="order_next">주문하기</string>
    <string name="order_cancel">주문취소</string>
    <string name="order_select">주문선택</string>
    <string name="order_pay">결제하기</string>
    <string name="order_number">주문번호</string>
    <string name="back_main">메인으로</string>
    <string name="select">선택</string>
    <string name="main_guide">\" 안녕하세요. 인천시 어르신들을 위한 연습용 키오스크입니다.\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;키오스크 체험은 세로로 잡고 연습해 주세요. \"</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="hour">시</string>
    <string name="name">이름</string>
    <string name="inquiry">조회</string>
    <string name="common_dialog_title_info">알림</string>
    <string name="common_dialog_title_error">오류</string>
    <string name="fastfood_menu_title1">추천메뉴</string>
    <string name="fastfood_menu_title2">햄버거</string>
    <string name="fastfood_menu_title3">사이드</string>
    <string name="fastfood_menu_title4">음료</string>
    <string name="fastfood_menu_title5">디저트</string>
    <string name="fastfood_burger1">스페셜 치즈</string>
    <string name="fastfood_burger2">불고기</string>
    <string name="fastfood_burger3">비프</string>
    <string name="fastfood_burgerset1">스페셜 버거 세트</string>
    <string name="fastfood_burgerset2">불고기 버거 세트</string>
    <string name="fastfood_burgerset3">비프 버거 세트</string>
    <string name="fastfood_drink1">콜라</string>
    <string name="fastfood_drink2">오렌지 스무디</string>
    <string name="fastfood_drink3">딸기 스무디</string>
    <string name="fastfood_drink4">청포도 스무디</string>
    <string name="fastfood_dessert1">딸기 아이스크림</string>
    <string name="fastfood_dessert2">녹차 아이스크림</string>
    <string name="fastfood_dessert3">바닐라 아이스크림</string>
    <string name="fastfood_dessert4">초코 아이스크림</string>
    <string name="fastfood_side1">감자튀김</string>
    <string name="fastfood_side2">샐러드</string>
    <string name="fastfood_side3">샌드위치</string>
    <string name="fastfood_side4">타코</string>
    <string name="fastfood_order_count">주문내역 (%d개)</string>
    <string name="fastfood_total_price">총 %s원</string>
    <string name="fastfood_explain1">주문을 원하시면 터치하세요</string>
    <string name="fastfood_explain1_sub">현금 결제를 원하시면\n카운터를 이용해 주시길 바랍니다</string>
    <string name="fastfood_explain2">식사하실 장소를 선택해 주세요</string>
    <string name="fastfood_explain2_in">매장에서\n식사</string>
    <string name="fastfood_explain2_out">테이크\n아웃</string>
    <string name="fastfood_explain3">주문하실 메뉴를 선택하세요</string>
    <string name="fastfood_explain4">세트 구성 메뉴를 선택하세요</string>
    <string name="fastfood_select_sidemenu">사이드 메뉴 선택</string>
    <string name="fastfood_select_drink">음료 선택</string>
    <string name="fastfood_explain5">결제하실 방법을 선택해 주세요</string>
    <string name="fastfood_payment_card">카드</string>
    <string name="fastfood_payment_card_detail">(신용카드/체크카드)</string>
    <string name="fastfood_payment_coupon">디지털쿠폰\n교환권</string>
    <string name="fastfood_payment_coupon_detail">(모바일 바코드)</string>
    <string name="fastfood_explain6">할인/적립 방법을 선택해 주세요</string>
    <string name="fastfood_payment_discount_saving1">선택 안함</string>
    <string name="fastfood_payment_discount_saving2">제휴사 할인</string>
    <string name="fastfood_payment_discount_saving3">포인트\n사용/적립</string>
    <string name="fastfood_coupon_reader_scan">쿠폰의 바코드를\n아래 리더기에 스캔해주세요</string>
    <string name="fastfood_coupon_reader_scan1">쿠폰번호 입력</string>
    <string name="fastfood_card_use_method">IC신용/체크카드 사용 방법</string>
    <string name="fastfood_card_use_method_detail">카드를 투입구에 넣어주시고,\n결제 오류시 카드를 옆으로 긁어주세요</string>
    <string name="fastfood_payment_success">결제가 완료되었습니다.</string>
    <string name="fastfood_payment_success_detail">주문하신 메뉴가 준비되면\n주문번호를 호출 모니터에 안내해 드립니다.</string>
    <string name="train_main_title1">승차권 예매</string>
    <string name="train_main_title2">승차권 확인</string>
    <string name="train_main_title3">예약권 확인</string>
    <string name="train_one_way">편도</string>
    <string name="train_round_trip">왕복</string>
    <string name="train_start">출발</string>
    <string name="train_arrival">도착</string>
    <string name="train_start_date">출발일</string>
    <string name="train_arrival_date">도착일</string>
    <string name="train_passenger_seat_title">승객 연령 및 좌석수</string>
    <string name="train_passenger_seat_count">총 %d명</string>
    <string name="train_passenger_seat_count2">%d명</string>
    <string name="train_make_an_inquiry">열차 조회하기</string>
    <string name="train_seat_max">최대 9명까지 가능합니다.</string>
    <string name="train_passenger_type_baby">유아</string>
    <string name="train_passenger_type_children">어린이</string>
    <string name="train_passenger_type_adult">어른</string>
    <string name="train_passenger_type_old">경로</string>
    <string name="train_passenger_type_baby_detail">(만 6세 미만)</string>
    <string name="train_passenger_type_children_detail">(만 6~12세)</string>
    <string name="train_passenger_type_adult_detail">(만 13세 이상)</string>
    <string name="train_passenger_type_old_detail">(만 65세 이상)</string>
    <string name="train_station_searchbar_input_hint">역 명을 입력해 주세요.</string>
    <string name="train_station_searchbar_subtitle">주요역</string>
    <string name="train_calendar_last_month">이전달</string>
    <string name="train_calendar_next_month">다음달</string>
    <string name="train_calendar_last_day">이전날</string>
    <string name="train_calendar_next_day">다음날</string>
    <string name="train_calendar_today">오늘</string>
    <string name="train_calendar_no_selected_day">현재 이전 일은 선택 불가합니다.</string>
    <string name="train_calendar_no_selected_time">현재 시간 이전은 선택이 불가합니다.</string>
    <string name="train_calendar_empty_selected_time">해당 월에 출발 날짜를 선택해주세요.</string>
    <string name="train_search_title">열차 조회</string>
    <string name="train_search_subtitle_train">열차</string>
    <string name="train_search_subtitle_start">출발</string>
    <string name="train_search_subtitle_end">도착</string>
    <string name="train_search_subtitle_basic">일반실</string>
    <string name="train_search_subtitle_vip">특/우등</string>
    <string name="train_search_reservation">예매</string>
    <string name="train_search_waiting_for_reservation">예약대기 신청</string>
    <string name="train_search_reservation_seat">입석+좌석</string>
    <string name="train_search_waiting_reservation">예약대기</string>
    <string name="train_search_no_select">선택하신 열차가 없습니다.</string>
    <string name="train_search_seat_soldout">매진</string>
    <string name="train_seat_select_title">좌석선택</string>
    <string name="train_seat_type1">마감석</string>
    <string name="train_seat_type2">잔여석</string>
    <string name="train_seat_type3">선택좌석</string>
    <string name="train_seat_direction">순방향</string>
    <string name="train_seat_reverse_direction">역방향</string>
    <string name="train_seat_window_outside">창측</string>
    <string name="train_seat_window_inside">내측</string>
    <string name="train_seat_train_number">호차</string>
    <string name="train_seat_count_remain">잔여 %d석</string>
    <string name="train_seat_count_total">전체 %d석</string>
    <string name="train_seat_footer_title">선택 완료</string>
    <string name="train_payment_title">결제</string>
    <string name="train_payment_subtitle1">카드결제</string>
    <string name="train_payment_subtitle2">현장결제</string>
    <string name="train_payment_footer_text">결제/발권</string>
    <string name="train_payment_direct_explain">위의 사진과 같이 카드의 IC칩이\n카드리더기를 향하도록 투입하여 주세요.</string>
    <string name="train_payment_card_number">카드번호</string>
    <string name="train_payment_card_validity">유효기간</string>
    <string name="train_payment_card_password">비밀번호</string>
    <string name="train_payment_card_kind">카드종류</string>
    <string name="train_payment_card_kind_personal">개인</string>
    <string name="train_payment_card_kind_corporation">법인</string>
    <string name="train_payment_card_auth_num">인증번호</string>
    <string name="train_payment_card_registration_num">주민번호 앞 6자리</string>
    <string name="train_payment_card_installment_period">할부기간</string>
    <string name="train_payment_card_pay_full">일시불</string>
    <string name="train_payment_card_monthly_installment1">1개월</string>
    <string name="train_payment_card_monthly_installment2">2개월</string>
    <string name="train_payment_card_agreement">개인정보 수집 및 이용 동의</string>
    <string name="train_payment_card_agreement_msg">개인정보 수집 및 이용 동의에 체크하셔야 결제가능합니다.</string>
    <string name="train_payment_total_count">총 %d개</string>
    <string name="train_payment_complete_title">결제완료</string>
    <string name="train_payment_complete_thankyou">감사합니다.</string>
    <string name="train_payment_complete_str">고객님의 승차권 발권이 완료 되었습니다.</string>
    <string name="train_payment_info">결제정보</string>
    <string name="train_payment_approval_date">승인일자</string>
    <string name="train_payment_approval_number">승인번호</string>
    <string name="train_payment_total_price">총 금액</string>
    <string name="train_reservation_request_complete_title">신청완료</string>
    <string name="train_reservation_request_complete">예약대기 신청이 완료되었습니다.</string>
    <string name="train_round_trip_ticket_guide">가는 승차권 예약이 완료되었습니다.\n확인을 선택하시면 오는 승차권 예약을 진행합니다.</string>
    <string name="train_errmsg_no_select_start_station">출발지를 선택하세요</string>
    <string name="train_errmsg_no_select_arrival_station">도착지를 선택하세요</string>
    <string name="train_errmsg_no_select_start_date">출발일을 선택하세요</string>
    <string name="train_errmsg_no_select_arrival_date">도착일을 선택하세요</string>
    <string name="train_errmsg_no_select_seat">승객 연령 및 좌석수를 선택하세요</string>
    <string name="train_errmsg_not_all_seat_selected">좌석 선택이 모두 되지 않았습니다</string>
    <string name="train_errmsg_check_date">출발일/도착일 날짜를 다시 한번 확인해주시기 바랍니다.</string>
    <string name="train_ticket_reservation_check_title">예약승차권 조회</string>
    <string name="train_ticket_reservation_cancel">예약취소</string>
    <string name="train_ticket_reservation_cancel_dialog_title">취소완료</string>
    <string name="train_ticket_reservation_cancel_dialog_content">예약이 정상적으로 취소되었습니다.</string>
    <string name="train_ticket_confirm_title">승차권 확인</string>
    <string name="train_ticket_count">스마트티켓 %d매</string>
    <string name="train_ticket_delivery">전달하기</string>
    <string name="train_ticket_return">반환하기</string>
    <string name="train_ticket_return_complete">반환처리 되었습니다.</string>
    <string name="train_ticket_delivery_method">전달매체</string>
    <string name="train_ticket_delivery_method1">코레일톡</string>
    <string name="train_ticket_delivery_method2">알림톡(SMS)</string>
    <string name="train_ticket_delivery_method3">카카오톡</string>
    <string name="train_member_type_title">회원구분</string>
    <string name="train_member">회원</string>
    <string name="train_non_member">비회원</string>
    <string name="train_member_confirm_title">회원확인방법</string>
    <string name="train_member_confirm_membernum">회원\n번호</string>
    <string name="train_member_confirm_phonenum">휴대폰</string>
    <string name="train_member_confirm_email">이메일</string>
    <string name="train_member_confirm_success">회원 확인되었습니다.</string>
    <string name="train_member_password">비밀번호</string>
    <string name="train_member_password2">비밀번호 확인</string>
    <string name="train_member_password_hint">숫자 5자리</string>
    <string name="train_to_cantact">받는분 연락처</string>
    <string name="train_to_cantact_hint"><![CDATA[\'-\']]> 제외하고 입력</string>
    <string name="train_ticket_delivery_warning_msg">* 승차권을 잘못 전달한 경우 3시간 이내 회수가 가능하며, 열차출발 10분 이내일때는 전달한 승차권 회수가 불가능합니다.</string>
</resources>